# batch_please

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  batch_please.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml  release.yml
api/: index.html
docs/: api.md  index.md
search/: search_index.json
src/batch_please/: batchers.py
src/batch_processors/: __init__.py  batchers.py
tests/: test_batchers.py
